[package]
name = "arcdps_wvw"
version = "0.1.0"
edition = "2021"

[lib]
name = "arcdps_wvw"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
imgui-sys = "0.7.0"

winapi = { version = "0.3", features = ["basetsd","d3d11", "d3d11_1", "d3d11sdklayers", "d3dcommon","d3dcompiler","dxgi1_2","dxgi1_3","dxgi1_4", "dxgi1_5", "dxgiformat","dxgitype","handleapi","minwindef","synchapi","unknwnbase","winbase","windef","winerror","winnt","winuser"] }
#winapi = { version = "0.3", features = ["d3d11", "d3d11_1", "dxgitype"] }

image = "0.24.7"


once_cell = "1.18.0"

# needed for linux
glium = { version = "0.29.1", default-features = true }
imgui-glium-renderer = "0.7.0"

c_str_macro = "1.0.3"
